Unit tests for TopicControllerService, refactorings (#251)
* Unit tests TopicControllerService - other methods, and refactorings
* Validations on default superadmin user
* Add unit tests for UsersTeamsService
* Add default user pwd check

Co-authored-by: muralibasani <muralidhar.basani@aiven.io>