@@ -1,5 +1,6 @@
 package io.aiven.klaw.service;
 
+import static io.aiven.klaw.model.enums.ApiResultStatus.NOT_AUTHORIZED;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
@@ -11,26 +12,28 @@ import io.aiven.klaw.UtilMethods;
 import io.aiven.klaw.config.ManageDatabase;
 import io.aiven.klaw.dao.Env;
 import io.aiven.klaw.dao.KwClusters;
-import io.aiven.klaw.dao.Team;
 import io.aiven.klaw.dao.Topic;
 import io.aiven.klaw.dao.TopicRequest;
 import io.aiven.klaw.dao.UserInfo;
 import io.aiven.klaw.error.KlawException;
+import io.aiven.klaw.helpers.KwConstants;
 import io.aiven.klaw.helpers.db.rdbms.HandleDbRequestsJdbc;
 import io.aiven.klaw.model.ApiResponse;
-import io.aiven.klaw.model.ApiResultStatus;
-import io.aiven.klaw.model.KafkaClustersType;
-import io.aiven.klaw.model.KafkaSupportedProtocol;
 import io.aiven.klaw.model.KwTenantConfigModel;
-import io.aiven.klaw.model.RequestOperationType;
-import io.aiven.klaw.model.SyncTopicUpdates;
+import io.aiven.klaw.model.TopicConfigEntry;
 import io.aiven.klaw.model.TopicInfo;
 import io.aiven.klaw.model.TopicRequestModel;
-import io.aiven.klaw.model.TopicRequestTypes;
+import io.aiven.klaw.model.enums.AclPatternType;
+import io.aiven.klaw.model.enums.AclType;
+import io.aiven.klaw.model.enums.ApiResultStatus;
+import io.aiven.klaw.model.enums.RequestOperationType;
+import io.aiven.klaw.model.enums.RequestStatus;
+import io.aiven.klaw.model.enums.TopicRequestTypes;
 import java.sql.Timestamp;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.BeforeEach;
@@ -60,10 +63,6 @@ public class TopicControllerServiceTest {
 
   @Mock private UserInfo userInfo;
 
-  @Mock private Map<Integer, KwClusters> clustersHashMap;
-
-  @Mock private KwClusters kwClusters;
-
   @Mock private ManageDatabase manageDatabase;
 
   @Mock private HandleDbRequestsJdbc handleDbRequests;
@@ -73,8 +72,6 @@ public class TopicControllerServiceTest {
   @Mock private MailUtils mailService;
 
   private TopicControllerService topicControllerService;
-
-  private TopicSyncControllerService topicSyncControllerService;
 
   @Mock RolesPermissionsControllerService rolesPermissionsControllerService;
 
@@ -89,7 +86,6 @@ public class TopicControllerServiceTest {
   @BeforeEach
   public void setUp() throws Exception {
     this.topicControllerService = new TopicControllerService(clusterApiService, mailService);
-    this.topicSyncControllerService = new TopicSyncControllerService();
     utilMethods = new UtilMethods();
     this.env = new Env();
     env.setId("1");
@@ -99,17 +95,6 @@ public class TopicControllerServiceTest {
     ReflectionTestUtils.setField(topicControllerService, "commonUtilsService", commonUtilsService);
     ReflectionTestUtils.setField(
         topicControllerService,
-        "rolesPermissionsControllerService",
-        rolesPermissionsControllerService);
-
-    ReflectionTestUtils.setField(topicSyncControllerService, "manageDatabase", manageDatabase);
-    ReflectionTestUtils.setField(topicSyncControllerService, "mailService", mailService);
-    ReflectionTestUtils.setField(
-        topicSyncControllerService, "commonUtilsService", commonUtilsService);
-    ReflectionTestUtils.setField(
-        topicSyncControllerService, "clusterApiService", clusterApiService);
-    ReflectionTestUtils.setField(
-        topicSyncControllerService,
         "rolesPermissionsControllerService",
         rolesPermissionsControllerService);
 
@@ -127,7 +112,7 @@ public class TopicControllerServiceTest {
 
   @Test
   @Order(1)
-  public void createTopicsSuccess() throws KlawException {
+  public void createTopicsSuccessAdvancedTopicConfigs() throws KlawException {
     Map<String, String> resultMap = new HashMap<>();
     resultMap.put("result", ApiResultStatus.SUCCESS.value);
 
@@ -142,14 +127,14 @@ public class TopicControllerServiceTest {
     when(handleDbRequests.requestForTopic(any())).thenReturn(resultMap);
     when(mailService.getEnvProperty(anyInt(), anyString())).thenReturn("1");
 
-    ApiResponse apiResponse = topicControllerService.createTopicsRequest(getCorrectTopic());
-
+    ApiResponse apiResponse =
+        topicControllerService.createTopicsRequest(getTopicWithAdvancedConfigs());
     assertThat(apiResponse.getResult()).isEqualTo(ApiResultStatus.SUCCESS.value);
   }
 
   @Test
   @Order(2)
-  public void createTopicsSuccess1() throws KlawException {
+  public void createTopicsSuccessDefaultValues() throws KlawException {
     Map<String, String> resultMap = new HashMap<>();
     resultMap.put("result", ApiResultStatus.SUCCESS.value);
 
@@ -164,15 +149,15 @@ public class TopicControllerServiceTest {
     when(handleDbRequests.requestForTopic(any())).thenReturn(resultMap);
     when(mailService.getEnvProperty(anyInt(), anyString())).thenReturn("1");
 
-    ApiResponse apiResponse = topicControllerService.createTopicsRequest(getFailureTopic());
-
+    ApiResponse apiResponse =
+        topicControllerService.createTopicsRequest(getTopicWithDefaultConfigs());
     assertThat(apiResponse.getResult()).isEqualTo(ApiResultStatus.SUCCESS.value);
   }
 
   // invalid partitions
   @Test
   @Order(3)
-  public void createTopicsFailure() throws KlawException {
+  public void createTopicsFailureInvalidPartitions() throws KlawException {
     Map<String, String> resultMap = new HashMap<>();
     resultMap.put("result", "failure");
 
@@ -188,13 +173,12 @@ public class TopicControllerServiceTest {
     when(mailService.getEnvProperty(anyInt(), anyString())).thenReturn("1");
 
     ApiResponse apiResponse = topicControllerService.createTopicsRequest(getFailureTopic1());
-
     assertThat(apiResponse.getResult()).contains("failure");
   }
 
   @Test
   @Order(4)
-  public void createTopicsFailure1() throws KlawException {
+  public void createTopicsFailureInvalidClusterTenantIds() throws KlawException {
 
     when(manageDatabase.getTenantConfig()).thenReturn(tenantConfig);
     when(tenantConfig.get(anyInt())).thenReturn(tenantConfigModel);
@@ -204,66 +188,315 @@ public class TopicControllerServiceTest {
     when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvListsIncorrect1());
     when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
         .thenReturn(Collections.singletonList("1"));
-
     when(mailService.getEnvProperty(anyInt(), anyString())).thenReturn("1");
 
     ApiResponse apiResponse = topicControllerService.createTopicsRequest(getFailureTopic1());
-
     assertThat(apiResponse.getResult()).isEqualTo(null);
   }
 
   @Test
-  @Order(7)
-  public void updateSyncTopicsSuccess() throws KlawException {
-    stubUserInfo();
-    when(manageDatabase.getTenantConfig()).thenReturn(tenantConfig);
-    when(tenantConfig.get(anyInt())).thenReturn(tenantConfigModel);
-    when(tenantConfigModel.getBaseSyncEnvironment()).thenReturn("1");
+  @Order(5)
+  public void createTopicDeleteRequestFailureNotAuthorized() {
+    String topicName = "testtopic1";
+    String envId = "1";
+    when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(true);
+
+    try {
+      ApiResponse apiResponse = topicControllerService.createTopicDeleteRequest(topicName, envId);
+      assertThat(apiResponse.getResult()).isEqualTo(NOT_AUTHORIZED.value);
+    } catch (KlawException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  @Test
+  @Order(6)
+  public void createTopicDeleteRequestFailureTopicAlreadyExists() {
+    String topicName = "testtopic1";
+    String envId = "1";
     when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(false);
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
-    when(handleDbRequests.addToSynctopics(any())).thenReturn(ApiResultStatus.SUCCESS.value);
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.selectTopicRequests(anyString(), anyString(), anyString(), anyInt()))
+        .thenReturn(getListTopicRequests());
+    try {
+      ApiResponse apiResponse = topicControllerService.createTopicDeleteRequest(topicName, envId);
+      assertThat(apiResponse.getResult())
+          .isEqualTo("Failure. A delete topic request already exists.");
+    } catch (KlawException e) {
+      throw new RuntimeException(e);
+    }
+  }
 
-    ApiResponse result =
-        topicSyncControllerService.updateSyncTopics(utilMethods.getSyncTopicUpdates());
-
-    assertThat(result.getResult()).isEqualTo(ApiResultStatus.SUCCESS.value);
+  @Test
+  @Order(7)
+  public void createTopicDeleteRequestFailureNotOwnerTeamOfTopic() {
+    String topicName = "testtopic1";
+    String envId = "1";
+    stubUserInfo();
+    when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(false);
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.selectTopicRequests(anyString(), anyString(), anyString(), anyInt()))
+        .thenReturn(Collections.emptyList());
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(commonUtilsService.getFilteredTopicsForTenant(any()))
+        .thenReturn(List.of(getTopic(topicName)));
+    try {
+      ApiResponse apiResponse = topicControllerService.createTopicDeleteRequest(topicName, envId);
+      assertThat(apiResponse.getResult())
+          .isEqualTo(
+              "Failure. Sorry, you cannot delete this topic, as you are not part of this team.");
+    } catch (KlawException e) {
+      throw new RuntimeException(e);
+    }
   }
 
   @Test
   @Order(8)
-  public void updateSyncTopicsNoUpdate() throws KlawException {
-    List<SyncTopicUpdates> topicUpdates = new ArrayList<>();
-
+  public void createTopicDeleteRequestFailureTopicWithSubscriptions() {
+    String topicName = "testtopic1";
+    String envId = "1";
     stubUserInfo();
-    when(manageDatabase.getTenantConfig()).thenReturn(tenantConfig);
-    when(tenantConfig.get(anyInt())).thenReturn(tenantConfigModel);
-    when(tenantConfigModel.getBaseSyncEnvironment()).thenReturn("1");
+    when(commonUtilsService.getTeamId(anyString())).thenReturn(1);
     when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(false);
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
-
-    ApiResponse result = topicSyncControllerService.updateSyncTopics(topicUpdates);
-
-    assertThat(result.getResult()).isEqualTo("No record updated.");
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.selectTopicRequests(anyString(), anyString(), anyString(), anyInt()))
+        .thenReturn(Collections.emptyList());
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(commonUtilsService.getFilteredTopicsForTenant(any()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(handleDbRequests.getSyncAcls(anyString(), anyString(), anyInt()))
+        .thenReturn(utilMethods.getAcls());
+    try {
+      ApiResponse apiResponse = topicControllerService.createTopicDeleteRequest(topicName, envId);
+      assertThat(apiResponse.getResult())
+          .isEqualTo(
+              "Failure. There are existing subscriptions for topic. Please get them deleted before.");
+    } catch (KlawException e) {
+      throw new RuntimeException(e);
+    }
   }
 
   @Test
   @Order(9)
-  public void updateSyncTopicsNotAuthorized() throws KlawException {
+  public void createTopicDeleteRequestFailureTopicNotInCluster() {
+    String topicName = "testtopic1";
+    String envId = "2";
     stubUserInfo();
-    when(manageDatabase.getTenantConfig()).thenReturn(tenantConfig);
-    when(tenantConfig.get(anyInt())).thenReturn(tenantConfigModel);
-    when(tenantConfigModel.getBaseSyncEnvironment()).thenReturn("1");
-    ApiResponse result =
-        topicSyncControllerService.updateSyncTopics(utilMethods.getSyncTopicUpdates());
-
-    assertThat(result.getResult()).isEqualTo(ApiResultStatus.NOT_AUTHORIZED.value);
+    when(userInfo.getTeamId()).thenReturn(1);
+    when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(false);
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.selectTopicRequests(anyString(), anyString(), anyString(), anyInt()))
+        .thenReturn(Collections.emptyList());
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
+        .thenReturn(Collections.singletonList("1"));
+    try {
+      ApiResponse apiResponse = topicControllerService.createTopicDeleteRequest(topicName, envId);
+      assertThat(apiResponse.getResult())
+          .isEqualTo("Failure. Topic not found on cluster: " + topicName);
+    } catch (KlawException e) {
+      throw new RuntimeException(e);
+    }
   }
 
   @Test
   @Order(10)
-  public void getCreatedTopicRequests1() {
+  public void createTopicDeleteRequestSuccessDefaultValues() {
+    String topicName = "testtopic1";
+    String envId = "1";
+    stubUserInfo();
+    when(commonUtilsService.getTeamId(anyString())).thenReturn(1);
+    when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(false);
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.selectTopicRequests(anyString(), anyString(), anyString(), anyInt()))
+        .thenReturn(Collections.emptyList());
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(commonUtilsService.getFilteredTopicsForTenant(any()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(handleDbRequests.getSyncAcls(anyString(), anyString(), anyInt()))
+        .thenReturn(Collections.emptyList());
+    Map<String, String> deleteReqResult = new HashMap<>();
+    deleteReqResult.put("result", ApiResultStatus.SUCCESS.value);
+    when(handleDbRequests.requestForTopic(any())).thenReturn(deleteReqResult);
+    try {
+      ApiResponse apiResponse = topicControllerService.createTopicDeleteRequest(topicName, envId);
+      assertThat(apiResponse.getResult()).isEqualTo(ApiResultStatus.SUCCESS.value);
+    } catch (KlawException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  @Test
+  @Order(11)
+  public void createClaimTopicRequestFailureRequestAlreadyExists() {
+    String topicName = "testtopic1";
+    String envId = "1";
+    stubUserInfo();
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.selectTopicRequests(anyString(), anyString(), anyString(), anyInt()))
+        .thenReturn(getListTopicRequests());
+    try {
+      ApiResponse apiResponse = topicControllerService.createClaimTopicRequest(topicName, envId);
+      assertThat(apiResponse.getResult())
+          .isEqualTo("Failure. A request already exists for this topic.");
+    } catch (KlawException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  @Test
+  @Order(12)
+  public void createClaimTopicRequestSuccessDefaultValues() {
+    String topicName = "testtopic1";
+    String envId = "1";
+    stubUserInfo();
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.selectTopicRequests(anyString(), anyString(), anyString(), anyInt()))
+        .thenReturn(Collections.emptyList());
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(commonUtilsService.getFilteredTopicsForTenant(any()))
+        .thenReturn(List.of(getTopic(topicName)));
+    List<UserInfo> userList = utilMethods.getUserInfoList("testuser", "");
+    userList.get(0).setTeamId(1);
+    when(handleDbRequests.selectAllUsersInfo(anyInt())).thenReturn(userList);
+    Map<String, String> claimReqResult = new HashMap<>();
+    claimReqResult.put("result", ApiResultStatus.SUCCESS.value);
+    when(handleDbRequests.requestForTopic(any())).thenReturn(claimReqResult);
+    try {
+      ApiResponse apiResponse = topicControllerService.createClaimTopicRequest(topicName, envId);
+      assertThat(apiResponse.getResult()).isEqualTo(ApiResultStatus.SUCCESS.value);
+    } catch (KlawException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  @Test
+  @Order(13)
+  public void getTopicRequests() {
+    stubUserInfo();
+    when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
+    when(handleDbRequests.getAllTopicRequests(anyString(), anyInt()))
+        .thenReturn(getListTopicRequests());
+    when(commonUtilsService.deriveCurrentPage(anyString(), anyString(), anyInt())).thenReturn("1");
+    when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt())).thenReturn("INFRATEAM");
+
+    List<TopicRequestModel> listTopicRqs = topicControllerService.getTopicRequests("1", "", "all");
+    assertThat(listTopicRqs).hasSize(2);
+  }
+
+  @Test
+  @Order(14)
+  public void getTopicRequestsClaimType() {
+    stubUserInfo();
+    when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
+    List<TopicRequest> topicRequests = getListTopicRequests();
+    topicRequests.get(0).setTopictype(TopicRequestTypes.Claim.name());
+    when(handleDbRequests.getAllTopicRequests(anyString(), anyInt())).thenReturn(topicRequests);
+    when(commonUtilsService.deriveCurrentPage(anyString(), anyString(), anyInt())).thenReturn("1");
+    when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt())).thenReturn("INFRATEAM");
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt())).thenReturn(utilMethods.getTopics());
+    when(commonUtilsService.getFilteredTopicsForTenant(any())).thenReturn(utilMethods.getTopics());
+
+    List<TopicRequestModel> listTopicRqs = topicControllerService.getTopicRequests("1", "", "all");
+    assertThat(listTopicRqs).hasSize(2);
+  }
+
+  @Test
+  @Order(15)
+  public void getTopicRequestsOtherType() {
+    stubUserInfo();
+    when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
+    List<TopicRequest> topicRequests = getListTopicRequests();
+    topicRequests.get(0).setTopictype(TopicRequestTypes.Claim.name());
+    when(handleDbRequests.getAllTopicRequests(anyString(), anyInt())).thenReturn(topicRequests);
+    when(commonUtilsService.deriveCurrentPage(anyString(), anyString(), anyInt())).thenReturn("1");
+    when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt())).thenReturn("INFRATEAM");
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt())).thenReturn(utilMethods.getTopics());
+    when(commonUtilsService.getFilteredTopicsForTenant(any())).thenReturn(utilMethods.getTopics());
+
+    List<TopicRequestModel> listTopicRqs =
+        topicControllerService.getTopicRequests("1", "", "created");
+    assertThat(listTopicRqs).hasSize(2);
+  }
+
+  @Test
+  @Order(16)
+  public void getTopicTeamOnlyFailureNoTopicsFound() {
+    String topicName = "testtopic";
+    stubUserInfo();
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    Map<String, String> topicTeamMap =
+        topicControllerService.getTopicTeamOnly(topicName, AclPatternType.PREFIXED);
+    assertThat(topicTeamMap.get("error")).contains("There are no topics found with this prefix.");
+  }
+
+  @Test
+  @Order(17)
+  public void getTopicTeamOnlyFailurePrefixInMultipleTeams() {
+    String topicName = "testtopic";
+    List<Topic> topicList = utilMethods.getTopics();
+    Topic topic = new Topic();
+    topic.setTopicname("testtopic2");
+    topic.setEnvironment("1");
+    topicList.add(topic);
+
+    stubUserInfo();
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.getAllTopics(anyInt())).thenReturn(topicList);
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
+    Map<String, String> topicTeamMap =
+        topicControllerService.getTopicTeamOnly(topicName, AclPatternType.PREFIXED);
+    assertThat(topicTeamMap.get("error"))
+        .contains("There are atleast two topics with same prefix owned by different teams.");
+  }
+
+  @Test
+  @Order(18)
+  public void getTopicTeamOnlySuccessPatternPrefixed() {
+    String topicName = "testtopic";
+    String teamName = "TestTeam";
+    stubUserInfo();
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.getAllTopics(anyInt())).thenReturn(utilMethods.getTopics());
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
+    when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt())).thenReturn(teamName);
+    Map<String, String> topicTeamMap =
+        topicControllerService.getTopicTeamOnly(topicName, AclPatternType.PREFIXED);
+    assertThat(topicTeamMap.get("team")).isEqualTo(teamName);
+  }
+
+  @Test
+  @Order(19)
+  public void getTopicTeamOnlySuccessPatternLiteral() {
+    String topicName = "testtopic";
+    String teamName = "TestTeam";
+    stubUserInfo();
+    List<Topic> topicList = utilMethods.getTopics();
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt())).thenReturn(topicList);
+    when(commonUtilsService.getFilteredTopicsForTenant(any())).thenReturn(topicList);
+    when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt())).thenReturn(teamName);
+    Map<String, String> topicTeamMap =
+        topicControllerService.getTopicTeamOnly(topicName, AclPatternType.LITERAL);
+    assertThat(topicTeamMap.get("team")).isEqualTo(teamName);
+  }
+
+  @Test
+  @Order(20)
+  public void getCreatedTopicRequests() {
     List<TopicRequest> listTopicReqs = new ArrayList<>();
     listTopicReqs.add(getCorrectTopicDao());
     listTopicReqs.add(getCorrectTopicDao());
@@ -272,8 +505,8 @@ public class TopicControllerServiceTest {
     when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
     when(handleDbRequests.getCreatedTopicRequests(anyString(), anyString(), anyBoolean(), anyInt()))
         .thenReturn(listTopicReqs);
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
     when(commonUtilsService.deriveCurrentPage(anyString(), anyString(), anyInt())).thenReturn("1");
     when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt())).thenReturn("INFTATEAM");
 
@@ -284,8 +517,8 @@ public class TopicControllerServiceTest {
   }
 
   @Test
-  @Order(11)
-  public void getCreatedTopicRequests2() {
+  @Order(21)
+  public void getCreatedTopicRequestsWithMoreElements() {
     List<TopicRequest> listTopicReqs = new ArrayList<>();
     listTopicReqs.add(getTopicRequest("topic1"));
     listTopicReqs.add(getTopicRequest("topic2"));
@@ -297,8 +530,8 @@ public class TopicControllerServiceTest {
     when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
     when(handleDbRequests.getCreatedTopicRequests(anyString(), anyString(), anyBoolean(), anyInt()))
         .thenReturn(listTopicReqs);
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
     when(commonUtilsService.deriveCurrentPage(anyString(), anyString(), anyInt())).thenReturn("1");
     when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt())).thenReturn("INFTATEAM");
 
@@ -312,7 +545,7 @@ public class TopicControllerServiceTest {
   }
 
   @Test
-  @Order(12)
+  @Order(22)
   public void deleteTopicRequests() throws KlawException {
     when(handleDbRequests.deleteTopicRequest(anyInt(), anyInt()))
         .thenReturn(ApiResultStatus.SUCCESS.value);
@@ -322,8 +555,8 @@ public class TopicControllerServiceTest {
   }
 
   @Test
-  @Order(13)
-  public void approveTopicRequestsSuccess() throws KlawException {
+  @Order(23)
+  public void approveTopicRequests() throws KlawException {
     String topicName = "topic1";
     int topicId = 1001;
     TopicRequest topicRequest = getTopicRequest(topicName);
@@ -336,17 +569,75 @@ public class TopicControllerServiceTest {
     when(clusterApiService.approveTopicRequests(
             anyString(), anyString(), anyInt(), anyString(), anyString(), any(), anyInt()))
         .thenReturn(new ResponseEntity<>(apiResponse, HttpStatus.OK));
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
 
     ApiResponse apiResponse1 = topicControllerService.approveTopicRequests(topicId + "");
-
     assertThat(apiResponse1.getResult()).isEqualTo(ApiResultStatus.SUCCESS.value);
   }
 
   @Test
-  @Order(14)
-  public void approveTopicRequestsFailure1() throws KlawException {
+  @Order(24)
+  public void approveTopicClaimRequests() throws KlawException {
+    String topicName = "topic1";
+    int topicId = 1001;
+    TopicRequest topicRequest = getTopicRequest(topicName);
+    topicRequest.setTopictype(TopicRequestTypes.Claim.name());
+    ApiResponse apiResponse = ApiResponse.builder().result(ApiResultStatus.SUCCESS.value).build();
+
+    stubUserInfo();
+    when(handleDbRequests.selectTopicRequestsForTopic(anyInt(), anyInt())).thenReturn(topicRequest);
+    when(handleDbRequests.updateTopicRequest(any(), anyString()))
+        .thenReturn(ApiResultStatus.SUCCESS.value);
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(clusterApiService.approveTopicRequests(
+            anyString(), anyString(), anyInt(), anyString(), anyString(), any(), anyInt()))
+        .thenReturn(new ResponseEntity<>(apiResponse, HttpStatus.OK));
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
+    when(commonUtilsService.getFilteredTopicsForTenant(any()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(handleDbRequests.addToSynctopics(any())).thenReturn(ApiResultStatus.SUCCESS.value);
+    when(handleDbRequests.updateTopicRequestStatus(any(), anyString()))
+        .thenReturn(ApiResultStatus.SUCCESS.value);
+
+    ApiResponse apiResponse1 = topicControllerService.approveTopicRequests(topicId + "");
+    assertThat(apiResponse1.getResult()).isEqualTo(ApiResultStatus.SUCCESS.value);
+  }
+
+  @Test
+  @Order(25)
+  public void approveTopicUpdateRequests() throws KlawException {
+    String topicName = "topic1";
+    int topicId = 1001;
+    TopicRequest topicRequest = getTopicRequest(topicName);
+    topicRequest.setTopictype(TopicRequestTypes.Update.name());
+    ApiResponse apiResponse = ApiResponse.builder().result(ApiResultStatus.SUCCESS.value).build();
+
+    stubUserInfo();
+    when(handleDbRequests.selectTopicRequestsForTopic(anyInt(), anyInt())).thenReturn(topicRequest);
+    when(handleDbRequests.updateTopicRequest(any(), anyString()))
+        .thenReturn(ApiResultStatus.SUCCESS.value);
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(clusterApiService.approveTopicRequests(
+            anyString(), anyString(), anyInt(), anyString(), anyString(), any(), anyInt()))
+        .thenReturn(new ResponseEntity<>(apiResponse, HttpStatus.OK));
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
+    when(commonUtilsService.getFilteredTopicsForTenant(any()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt())).thenReturn("INFRATEAM");
+    when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
+
+    ApiResponse apiResponse1 = topicControllerService.approveTopicRequests(topicId + "");
+    assertThat(apiResponse1.getResult()).isEqualTo(ApiResultStatus.SUCCESS.value);
+  }
+
+  @Test
+  @Order(26)
+  public void approveTopicRequestsFailureResponseFromCluster() throws KlawException {
     String topicName = "topic1";
     int topicId = 1001;
     TopicRequest topicRequest = getTopicRequest(topicName);
@@ -359,20 +650,35 @@ public class TopicControllerServiceTest {
     when(clusterApiService.approveTopicRequests(
             anyString(), anyString(), anyInt(), anyString(), anyString(), any(), anyInt()))
         .thenReturn(new ResponseEntity<>(apiResponse, HttpStatus.OK));
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
 
     ApiResponse apiResponse1 = topicControllerService.approveTopicRequests("" + topicId);
-
-    assertThat(apiResponse.getResult()).isEqualTo("failure");
+    assertThat(apiResponse1.getResult()).isEqualTo("failure");
   }
 
   @Test
-  @Order(15)
+  @Order(27)
+  public void approveTopicRequestsFailureNotAllowed() throws KlawException {
+    String topicName = "topic1";
+    int topicId = 1001;
+    TopicRequest topicRequest = getTopicRequest(topicName);
+    topicRequest.setRequestor("kwusera");
+
+    stubUserInfo();
+    when(handleDbRequests.selectTopicRequestsForTopic(anyInt(), anyInt())).thenReturn(topicRequest);
+
+    ApiResponse apiResponse1 = topicControllerService.approveTopicRequests("" + topicId);
+    assertThat(apiResponse1.getResult())
+        .isEqualTo("You are not allowed to approve your own topic requests.");
+  }
+
+  @Test
+  @Order(28)
   public void getAllTopics() {
     stubUserInfo();
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
+
+    when(commonUtilsService.getFilteredTopicsForTenant(any())).thenReturn(utilMethods.getTopics());
     when(handleDbRequests.getSyncTopics(any(), any(), anyInt()))
         .thenReturn(utilMethods.getTopics());
 
@@ -382,20 +688,126 @@ public class TopicControllerServiceTest {
   }
 
   @Test
-  @Order(16)
-  public void getTopicsSuccess1() throws Exception {
+  @Order(29)
+  public void getAllTopicsForMyTeam() {
+    stubUserInfo();
+
+    when(commonUtilsService.getFilteredTopicsForTenant(any())).thenReturn(utilMethods.getTopics());
+    when(handleDbRequests.getSyncTopics(any(), any(), anyInt()))
+        .thenReturn(utilMethods.getTopics());
+    when(commonUtilsService.getTeamId(anyString())).thenReturn(3);
+
+    List<String> result = topicControllerService.getAllTopics(true);
+    assertThat(result).hasSize(1);
+    assertThat(result.get(0)).isEqualTo("testtopic");
+  }
+
+  @Test
+  @Order(30)
+  public void saveTopicDocumentation() throws KlawException {
+    stubUserInfo();
+    TopicInfo topicInfo = utilMethods.getTopicInfo();
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
+        .thenReturn(List.of(getTopic("testtopic")));
+    when(commonUtilsService.getFilteredTopicsForTenant(any())).thenReturn(utilMethods.getTopics());
+    when(commonUtilsService.getTeamId(anyString())).thenReturn(3);
+
+    when(handleDbRequests.updateTopicDocumentation(any()))
+        .thenReturn(ApiResultStatus.SUCCESS.value);
+
+    ApiResponse apiResponse = topicControllerService.saveTopicDocumentation(topicInfo);
+    assertThat(apiResponse.getResult()).isEqualTo(ApiResultStatus.SUCCESS.value);
+  }
+
+  @Test
+  @Order(31)
+  public void saveTopicDocumentationFailureInDbUpdate() throws KlawException {
+    stubUserInfo();
+    TopicInfo topicInfo = utilMethods.getTopicInfo();
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
+        .thenReturn(List.of(getTopic("testtopic")));
+    when(commonUtilsService.getFilteredTopicsForTenant(any())).thenReturn(utilMethods.getTopics());
+    when(commonUtilsService.getTeamId(anyString())).thenReturn(1);
+
+    when(handleDbRequests.updateTopicDocumentation(any()))
+        .thenReturn(ApiResultStatus.FAILURE.value);
+
+    ApiResponse apiResponse = topicControllerService.saveTopicDocumentation(topicInfo);
+    assertThat(apiResponse.getResult()).isEqualTo(ApiResultStatus.FAILURE.value);
+  }
+
+  @Test
+  @Order(32)
+  public void getTopicDetailsPerEnvFailureTopicDoesNotExist() {
+    stubUserInfo();
+    String envId = "1", topicName = "testtopic";
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.getTopics(anyString(), anyInt())).thenReturn(Collections.emptyList());
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
+
+    Map<String, Object> topicDetailsPerEnvResponse =
+        topicControllerService.getTopicDetailsPerEnv(envId, topicName);
+    assertThat(topicDetailsPerEnvResponse.get("error")).isEqualTo("Topic does not exist.");
+  }
+
+  @Test
+  @Order(33)
+  public void getTopicDetailsPerEnvFailureNotOwnerTeamOfTopic() {
+    stubUserInfo();
+    String envId = "1", topicName = "testtopic";
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.getTopics(anyString(), anyInt())).thenReturn(utilMethods.getTopics());
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
+    when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
+
+    Map<String, Object> topicDetailsPerEnvResponse =
+        topicControllerService.getTopicDetailsPerEnv(envId, topicName);
+    assertThat(topicDetailsPerEnvResponse.get("error"))
+        .isEqualTo("Sorry, your team does not own the topic !!");
+  }
+
+  @Test
+  @Order(34)
+  public void getTopicDetailsPerEnv() {
+    stubUserInfo();
+    String envId = "1", topicName = "testtopic";
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.getTopics(anyString(), anyInt())).thenReturn(utilMethods.getTopics());
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
+    when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
+    when(commonUtilsService.getTeamId(anyString())).thenReturn(3);
+
+    Map<String, Object> topicDetailsPerEnvResponse =
+        topicControllerService.getTopicDetailsPerEnv(envId, topicName);
+    assertThat(topicDetailsPerEnvResponse.get("topicExists")).isEqualTo(true);
+    assertThat(topicDetailsPerEnvResponse.get("topicContents")).isNotNull();
+  }
+
+  @Test
+  @Order(35)
+  public void getTopics() {
     String envSel = "1", pageNo = "1", topicNameSearch = "top";
 
     stubUserInfo();
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
     when(commonUtilsService.deriveCurrentPage(anyString(), anyString(), anyInt())).thenReturn("1");
     when(handleDbRequests.getSyncTopics(any(), any(), anyInt()))
         .thenReturn(getSyncTopics("topic", 4));
     when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
     when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt()))
-        .thenReturn("INFRATEAM", "INFRATEAM", "INFRATEAM", "INFRATEAM");
+        .thenReturn(
+            KwConstants.INFRATEAM,
+            KwConstants.INFRATEAM,
+            KwConstants.INFRATEAM,
+            KwConstants.INFRATEAM);
     when(mailService.getEnvProperty(anyInt(), anyString())).thenReturn("1");
+    when(commonUtilsService.groupTopicsByEnv(any())).thenReturn(getSyncTopics("topic", 4));
 
     List<List<TopicInfo>> topicsList =
         topicControllerService.getTopics(envSel, pageNo, "", topicNameSearch, null, null);
@@ -403,12 +815,78 @@ public class TopicControllerServiceTest {
     assertThat(topicsList).hasSize(2);
   }
 
+  @Test
+  @Order(36)
+  public void getTopicsWithProducerFilter() {
+    String envSel = "1", pageNo = "1", topicNameSearch = "top";
+
+    stubUserInfo();
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
+    when(commonUtilsService.deriveCurrentPage(anyString(), anyString(), anyInt())).thenReturn("1");
+    when(handleDbRequests.getSyncTopics(any(), any(), anyInt()))
+        .thenReturn(getSyncTopics("topic", 4));
+    when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
+    when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt()))
+        .thenReturn(
+            KwConstants.INFRATEAM,
+            KwConstants.INFRATEAM,
+            KwConstants.INFRATEAM,
+            KwConstants.INFRATEAM);
+    when(handleDbRequests.selectAllTopicsByTopictypeAndTeamname(anyString(), anyInt(), anyInt()))
+        .thenReturn(getSyncTopics("topic", 4));
+    when(mailService.getEnvProperty(anyInt(), anyString())).thenReturn("1");
+    when(commonUtilsService.groupTopicsByEnv(any())).thenReturn(getSyncTopics("topic", 4));
+    when(commonUtilsService.getFilteredTopicsForTenant(any())).thenReturn(utilMethods.getTopics());
+
+    List<List<TopicInfo>> topicsList =
+        topicControllerService.getTopics(
+            envSel, pageNo, "", topicNameSearch, KwConstants.INFRATEAM, AclType.PRODUCER.value);
+
+    assertThat(topicsList).isNull(); // for this filter criteria, there are no topics.
+  }
+
+  @Test
+  @Order(37)
+  public void getTopicsWithPatternFilter() {
+    String envSel = "1", pageNo = "1", topicNameSearch = "top";
+
+    stubUserInfo();
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
+    when(commonUtilsService.deriveCurrentPage(anyString(), anyString(), anyInt())).thenReturn("1");
+    when(handleDbRequests.getSyncTopics(any(), any(), anyInt()))
+        .thenReturn(getSyncTopics("topic", 4));
+    when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
+    when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt()))
+        .thenReturn(
+            KwConstants.INFRATEAM,
+            KwConstants.INFRATEAM,
+            KwConstants.INFRATEAM,
+            KwConstants.INFRATEAM);
+    List<Topic> syncTopics = getSyncTopics("topic", 4);
+    syncTopics.get(0).setEnvironmentsList(List.of("1", "2"));
+    syncTopics.get(0).setTopicname("testtopic");
+    when(handleDbRequests.selectAllTopicsByTopictypeAndTeamname(anyString(), anyInt(), anyInt()))
+        .thenReturn(getSyncTopics("topic", 4));
+    when(mailService.getEnvProperty(anyInt(), anyString())).thenReturn("1");
+    when(commonUtilsService.groupTopicsByEnv(any())).thenReturn(getSyncTopics("topic", 4));
+    List<Topic> topicList = utilMethods.getTopics();
+    topicList.get(0).setTopicname("testtopic" + "--" + AclPatternType.PREFIXED + "--");
+    when(commonUtilsService.getFilteredTopicsForTenant(any())).thenReturn(topicList);
+
+    List<List<TopicInfo>> topicsList =
+        topicControllerService.getTopics(
+            envSel, pageNo, "", topicNameSearch, KwConstants.INFRATEAM, AclType.PRODUCER.value);
+
+    assertThat(topicsList).isNull(); // for this filter criteria, there are no topics.
+  }
+
   // topicSearch does not exist in topic names
   @Test
-  @Order(18)
-  public void getTopicsSearchFailure() throws Exception {
+  @Order(38)
+  public void getTopicsSearchFailureNotExistingSearch() {
     String envSel = "1", pageNo = "1", topicNameSearch = "demo";
-
     stubUserInfo();
     when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
         .thenReturn(Collections.singletonList("1"));
@@ -422,34 +900,7 @@ public class TopicControllerServiceTest {
   }
 
   @Test
-  @Order(19)
-  public void getSyncTopics() throws Exception {
-    String envSel = "1", pageNo = "1", topicNameSearch = "top";
-
-    stubUserInfo();
-    when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
-    when(clusterApiService.getAllTopics(
-            anyString(), any(KafkaSupportedProtocol.class), anyString(), anyInt()))
-        .thenReturn(utilMethods.getClusterApiTopics("topic", 10));
-    when(handleDbRequests.selectAllTeamsOfUsers(anyString(), anyInt()))
-        .thenReturn(getAvailableTeams());
-    when(manageDatabase.getClusters(any(KafkaClustersType.class), anyInt()))
-        .thenReturn(clustersHashMap);
-    when(clustersHashMap.get(any())).thenReturn(kwClusters);
-    when(kwClusters.getBootstrapServers()).thenReturn("clusters");
-    when(kwClusters.getProtocol()).thenReturn(KafkaSupportedProtocol.PLAINTEXT);
-    when(kwClusters.getClusterName()).thenReturn("cluster");
-    when(rolesPermissionsControllerService.getApproverRoles(anyString(), anyInt()))
-        .thenReturn(List.of("USER"));
-
-    Map<String, Object> topicRequests =
-        topicSyncControllerService.getSyncTopics(
-            envSel, pageNo, "", topicNameSearch, "false", false);
-    assertThat(topicRequests).hasSize(2);
-  }
-
-  @Test
-  @Order(20)
+  @Order(39)
   public void declineTopicRequests() throws KlawException {
     String topicName = "testtopic";
     int topicId = 1001;
@@ -458,8 +909,8 @@ public class TopicControllerServiceTest {
     stubUserInfo();
     when(handleDbRequests.selectTopicRequestsForTopic(anyInt(), anyInt())).thenReturn(topicRequest);
     when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(false);
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
     when(handleDbRequests.declineTopicRequest(any(), anyString()))
         .thenReturn(ApiResultStatus.SUCCESS.value);
     ApiResponse resultResp = topicControllerService.declineTopicRequests(topicId + "", "Reason");
@@ -468,50 +919,87 @@ public class TopicControllerServiceTest {
   }
 
   @Test
-  @Order(21)
-  public void getTopicRequests() {
+  @Order(40)
+  public void declineTopicRequestsFailureRequestDoesNotExist() throws KlawException {
+    String topicName = "testtopic";
+    int topicId = 1001;
+    TopicRequest topicRequest = getTopicRequest(topicName);
+    topicRequest.setTopicstatus(RequestStatus.APPROVED.value);
 
     stubUserInfo();
-    when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
-    when(handleDbRequests.getAllTopicRequests(anyString(), anyInt()))
-        .thenReturn(getListTopicRequests());
-    when(commonUtilsService.deriveCurrentPage(anyString(), anyString(), anyInt())).thenReturn("1");
-    when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt())).thenReturn("INFRATEAM");
+    when(handleDbRequests.selectTopicRequestsForTopic(anyInt(), anyInt())).thenReturn(topicRequest);
+    when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(false);
+    when(handleDbRequests.declineTopicRequest(any(), anyString()))
+        .thenReturn(ApiResultStatus.SUCCESS.value);
+    ApiResponse resultResp = topicControllerService.declineTopicRequests(topicId + "", "Reason");
 
-    List<TopicRequestModel> listTopicRqs = topicControllerService.getTopicRequests("1", "", "all");
-    assertThat(listTopicRqs).hasSize(2);
+    assertThat(resultResp.getResult()).isEqualTo("This request does not exist anymore.");
   }
 
   @Test
-  @Order(22)
+  @Order(41)
   public void getTopicTeam() {
     String topicName = "testtopic";
     stubUserInfo();
     when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
         .thenReturn(List.of(getTopic(topicName)));
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
+    when(commonUtilsService.getFilteredTopicsForTenant(any()))
+        .thenReturn(List.of(getTopic(topicName)));
 
     List<Topic> topicTeam = topicControllerService.getTopicFromName(topicName, 1);
     assertThat(topicTeam.get(0).getTeamId()).isOne();
   }
 
-  private TopicRequestModel getCorrectTopic() {
+  @Test
+  @Order(42)
+  public void getTopicEvents() throws KlawException {
+    String envId = "1", consumerGroupId = "consuemrgroup", topicName = "testtopic", offsetId = "5";
+    stubUserInfo();
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
 
+    Map<Integer, KwClusters> kwClustersMap = new HashMap<>();
+    kwClustersMap.put(1, utilMethods.getKwClusters());
+    when(manageDatabase.getClusters(any(), anyInt())).thenReturn(kwClustersMap);
+    when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
+    Map<String, String> eventsMap = new HashMap<>();
+    eventsMap.put("1", "hello world1"); // offsetid, content
+    eventsMap.put("2", "hello world2"); // offsetid, content
+    when(clusterApiService.getTopicEvents(
+            anyString(), any(), anyString(), anyString(), anyString(), anyString(), anyInt()))
+        .thenReturn(eventsMap);
+
+    Map<String, String> topicEventsMap =
+        topicControllerService.getTopicEvents(envId, consumerGroupId, topicName, offsetId);
+    assertThat(topicEventsMap).hasSize(2);
+  }
+
+  @Test
+  @Order(43)
+  public void getExistingTopicRequests() {
+    when(handleDbRequests.selectTopicRequests(anyString(), anyString(), anyString(), anyInt()))
+        .thenReturn(utilMethods.getTopicRequests());
+    List<TopicRequest> topicReqResponse =
+        topicControllerService.getExistingTopicRequests(utilMethods.getTopicRequestModel(101), 1);
+    assertThat(topicReqResponse).hasSize(1);
+  }
+
+  private TopicRequestModel getTopicWithAdvancedConfigs() {
     TopicRequestModel topicRequest = new TopicRequestModel();
     topicRequest.setTopicname("newtopicname");
     topicRequest.setEnvironment(env.getId());
     topicRequest.setTopicpartitions(2);
     topicRequest.setRequesttime(new Timestamp(System.currentTimeMillis()));
     topicRequest.setTopictype(TopicRequestTypes.Create.toString());
-    topicRequest.setAdvancedTopicConfigEntries(null);
+    List<TopicConfigEntry> topicConfigEntryList = new ArrayList<>();
+    TopicConfigEntry topicConfigEntry1 = new TopicConfigEntry("compression.type", "snappy");
+    TopicConfigEntry topicConfigEntry2 = new TopicConfigEntry("flush.ms", "12345");
+    topicConfigEntryList.add(topicConfigEntry1);
+    topicConfigEntryList.add(topicConfigEntry2);
+    topicRequest.setAdvancedTopicConfigEntries(topicConfigEntryList);
     return topicRequest;
   }
 
-  private TopicRequestModel getFailureTopic() {
-
+  private TopicRequestModel getTopicWithDefaultConfigs() {
     TopicRequestModel topicRequest = new TopicRequestModel();
     topicRequest.setTopicname("newtopicname");
     topicRequest.setEnvironment(env.getId());
@@ -522,7 +1010,6 @@ public class TopicControllerServiceTest {
   }
 
   private TopicRequest getCorrectTopicDao() {
-
     TopicRequest topicRequest = new TopicRequest();
     topicRequest.setEnvironment(env.getId());
     topicRequest.setTopicpartitions(2);
@@ -532,17 +1019,7 @@ public class TopicControllerServiceTest {
     return topicRequest;
   }
 
-  private TopicRequest getFailureTopicDao() {
-
-    TopicRequest topicRequest = new TopicRequest();
-    topicRequest.setEnvironment(env.getId());
-    topicRequest.setTopicpartitions(3);
-    topicRequest.setRequesttime(new Timestamp(System.currentTimeMillis()));
-    return topicRequest;
-  }
-
   private TopicRequestModel getFailureTopic1() {
-
     TopicRequestModel topicRequest = new TopicRequestModel();
     topicRequest.setTopicname("newtopicname");
     topicRequest.setEnvironment(env.getId());
@@ -553,7 +1030,6 @@ public class TopicControllerServiceTest {
   }
 
   private TopicRequest getTopicRequest(String name) {
-
     TopicRequest topicRequest = new TopicRequest();
     topicRequest.setTopicname(name);
     topicRequest.setEnvironment(env.getId());
@@ -563,12 +1039,14 @@ public class TopicControllerServiceTest {
     topicRequest.setTeamId(101);
     topicRequest.setTopicstatus("created");
     topicRequest.setRequestor("kwuserb");
+    topicRequest.setJsonParams(
+        "{\"advancedTopicConfiguration\":{\"compression.type\":\"snappy\",\"cleanup.policy\":\"compact\"}}");
     topicRequest.setTopictype(RequestOperationType.CREATE.value);
+    topicRequest.setTenantId(101);
     return topicRequest;
   }
 
   private List<TopicRequest> getListTopicRequests() {
-
     TopicRequest topicRequest = new TopicRequest();
     topicRequest.setTopicname("testtopic1");
     topicRequest.setEnvironment(env.getId());
@@ -587,29 +1065,12 @@ public class TopicControllerServiceTest {
     topicRequest1.setTeamId(101);
     topicRequest1.setTopicstatus("created");
     topicRequest1.setRequesttime(new Timestamp(System.currentTimeMillis()));
+    topicRequest1.setJsonParams(
+        "{\"advancedTopicConfiguration\":{\"compression.type\":\"snappy\",\"cleanup.policy\":\"compact\"}}");
 
     listReqs.add(topicRequest1);
 
     return listReqs;
-  }
-
-  private List<Team> getAvailableTeams() {
-
-    Team team1 = new Team();
-    team1.setTeamname("Team1");
-
-    Team team2 = new Team();
-    team2.setTeamname("Team2");
-
-    Team team3 = new Team();
-    team3.setTeamname("Team3");
-
-    List<Team> teamList = new ArrayList<>();
-    teamList.add(team1);
-    teamList.add(team2);
-    teamList.add(team3);
-
-    return teamList;
   }
 
   private Topic getTopic(String topicName) {
@@ -619,6 +1080,10 @@ public class TopicControllerServiceTest {
     t.setTopicid(1);
     t.setTenantId(0);
     t.setEnvironment("1");
+    t.setHistory(
+        "[{\"environmentName\":\"DEV\",\"teamName\":\"Team\",\"requestedBy\":\"user\","
+            + "\"requestedTime\":\"2022-Sep-23 13:38:22\",\"approvedBy\":\"user\","
+            + "\"approvedTime\":\"2022-Sep-23 13:38:52\",\"remarks\":\"Create\"}]");
 
     return t;
   }
@@ -637,6 +1102,7 @@ public class TopicControllerServiceTest {
       t.setTopicid(i);
       t.setEnvironment("1");
       t.setTeamId(101);
+      t.setEnvironmentsList(new ArrayList<>());
 
       listTopics.add(t);
     }
